--- a/config/nginx/conf.d/local.conf
+++ b/config/nginx/conf.d/local.conf
@@ -14,8 +14,28 @@ server {
     location / {
         # everything is passed to Gunicorn
         proxy_pass http://immersivetech_server;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header Host $host;
+        # proxy_redirect off;
+
+        # Using $http_host instead of $host is absolutely essential for this authentication package
+        # to work in a local development environment. This ensures that the port number is retained
+        # in the host header, and consequently, that the HMAC-SHA1 signature is correctly constructed. 
+        proxy_set_header    Host $http_host;
+        proxy_set_header    X-Real-IP $remote_addr;
+        proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Forwarded-Host $server_name;
+        # The following line ensures that the https protocol is correctly passed onwards to the Django
+        # application. Otherwise, the application will incorrectly assume that http was used, and the
+        # HMAC-SHA1 signature verification will fail.
+        proxy_set_header    X-Forwarded-Proto $scheme;
+    }
+
+    location /static/ {
+        alias /immersivetech3/immersivetech/static/;
+    }
+
+    location /media/ {
+        alias /immersivetech3/immersivetech/media/;
     }
 }
